# Brunnstein-Beverages

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: data_generator.py  generate_erd.py  models.py
data/banking/: statements.py
data/crm/: load.py  models.py
data/crm/generators/: pipeline.py
data/documents/: _pdf.py  complaints.py  contracts.py  dunning.py  generate.py  images.py  spec_sheets.py
data/documents/supplier_invoice/: generate.py  layouts.py  test_cases.py
data/erp/: generate_erd.py  load_to_dsql.py  models.py
data/erp/generators/: _market_helpers.py  _text.py  customers.py  gl.py  goods_receipts.py  inventory.py  plants.py  production.py  products.py  purchase_orders.py  raw_materials.py  returns.py  sales.py  supplier_invoices.py  suppliers.py
data/export/: __init__.py  lake.py  structured.py
data/generators/: _market_helpers.py  goods_receipts.py  purchase_orders.py  raw_materials.py  supplier_invoices.py  suppliers.py
data/hr/: load.py  models.py  time_tracking.py
data/hr/generators/: employees.py  org.py  payroll.py  time.py
data/notebooks/: data_exploration.ipynb
data/pdf/supplier_invoice/: _formatters.py  generate.py  layouts.py
data/retail/: sellthrough.py
data/shopfloor/: machine_logs.py  telemetry.py
data/webshop/: events.py  orders.py  reviews.py
docs/: architecture.md  data_model.md  infra.md
infra/: .terraform.lock.hcl  budget.tf  dsql.tf  iam.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
notebooks/: 01_data_generator.ipynb  02_data_exploration.ipynb
test_invoices/02_iban_fraud/: tc-002-fraud.json
test_invoices/03_iban_typo/: tc-003-typo.json
test_invoices/07_price_drift/: tc-007-price.json
test_invoices/08_early_invoice/: tc-008-early.json
use_cases/automated_invoice_processing/: ui.py
use_cases/automated_invoice_processing/agent/: evaluate.py  extraction.py  graph.py  hello.py  persist.py  policy.py  run.py  schema.py  signals.py  validation.py
use_cases/automated_invoice_processing/eval/: test_case_generation.py
use_cases/automated_invoice_processing/notebooks/: automated_invoice_processing.ipynb
use_cases/automated_invoice_processing/test_invoices/01_clean_match/: tc-001-clean.json
use_cases/automated_invoice_processing/test_invoices/04_po_not_found/: tc-004-nopo.json
use_cases/automated_invoice_processing/test_invoices/05_supplier_not_in_master/: tc-005-unknown.json
use_cases/automated_invoice_processing/test_invoices/06_quantity_discrepancy/: tc-006-qty.json
use_cases/automated_invoice_processing/tests/: test_decide.py  test_extraction.py  test_validation.py
