[project]
name = "brunnstein-beverages"
version = "0.1.0"
description = "Data & AI use case demos for a fictional German beverage manufacturer."
authors = [{ name = "Leon Henze" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "faker>=20",
    "psycopg[binary]>=3.1",
    "boto3>=1.35",
    "python-dotenv>=1.0",
    "reportlab>=4.2",
    "langgraph>=0.3,<0.5",
    "langchain-aws>=0.2,<0.3",
    "langchain-core>=0.3.50,<0.3.70",
    "pydantic>=2.5",
    "mlflow-skinny>=2.18",
    "alembic>=1.13",  # required for the SQLite-backed mlflow tracking store
    "streamlit>=1.36",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pandas>=2.2",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "pillow>=12.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "use_cases"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "RUF",  # ruff-specific
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["use_cases/automated_invoice_processing/tests"]
